WRP-603 Removed inline styles and updated taxonomy elements css definitions in app/styles/edit.scss to tighten up the taxonomy display and make best use of fixed width space (can be revisited when adjustable width panel is implemented) to minimise text wrapping in tree labels.

--- a/app/shared/taxonomy/taxonomy.css
+++ b/app/shared/taxonomy/taxonomy.css
@@ -1,5 +1,6 @@
+/*
 aside.sidebar ul ul a {
-  padding: 8px 15px 8px 0px;
+  padding: 4px 10px 4px 0px;
 }
 
 aside.sidebar ul a {
@@ -7,6 +8,7 @@ aside.sidebar ul a {
 }
 
 aside.sidebar i {
-  color: lightblue;
-  font-size: 14px;
+  color: #00a4e4;
+  font-size: 10px;
 }
+*/
